// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders custom props 1`] = `
<textarea
  className="form__input"
  id="idTest"
  name="nameTest"
  onChange={[Function]}
  placeholder="placeholderTest"
  required={false}
  title=""
  value=""
/>
`;

exports[`TextArea renders defaultProps 1`] = `
<textarea
  className="form__input"
  id=""
  name=""
  onChange={[Function]}
  placeholder=""
  required={false}
  title=""
  value=""
/>
`;
